[package]
name = "rctl"
version = "0.1.0"
authors = ["Aelpxy <aelpxy@protonmail.com>"]
description = "Development containers made easy."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.17"
